# core

./: .gitignore  LICENSE  README.md  core.cabal  core.nix  default.nix  shell.nix  stack.yaml
src/: Core.hs  Types.hs
src/Core/: Language.hs  Parser.hs  Pretty.hs  Template.hs  Utils.hs
test/: Spec.hs
test/input/: ex1_21.core  ex2_11.core  ex2_13.core  ex2_4.core  infix_simpl.core  infixops.core
