name:                core
version:             0.1.0.0
synopsis:            Implementing functional languages
-- description:
homepage:            https://github.com/themattchan/core#readme
license:             MIT
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2017 Matthew Chan
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/themattchan/core

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Core.Language
                     , Core.Pretty
                     , Core.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , mtl
                     , pretty
  default-language:    Haskell2010

-- executable core-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , core
--   default-language:    Haskell2010

test-suite core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , core
                     , tasty
                     , tasty-hunit
--                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
